--- a/portafolio-single.html
+++ b/portafolio-single.html
@@ -8,22 +8,21 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Fotografy &mdash; Fotografía y Video</title>
+	<title>Christian Sáenz &mdash; Fotografía y Video</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Fotografia Profesional" />
+	<meta name="keywords" content="fotografia, bodas, fotografo profesional, eventos" />
+	<meta name="author" content="Phronemos.net" />
 
   <!-- 
 	//////////////////////////////////////////////////////
 
 	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
+	DESIGNED & DEVELOPED by PHRONEMOS
 		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
+	Website: 		http://phronemos.net
+	Email: 			info@phronemos.net
+	Facebook: 		https://www.facebook.com/prhonemos
 
 	//////////////////////////////////////////////////////
 	 -->
@@ -63,6 +62,7 @@
 	<![endif]-->
 
 	</head>
+    
 	<body>
 	
 	<div id="fh5co-header">
@@ -74,10 +74,10 @@
 			</div>
 			<nav id="fh5co-main-nav">
 				<ul>
-					<li><a href="index.html" class="transition" data-nav-section="home">Home</a></li>
-					<li><a href="index.html" class="transition" data-nav-section="portfolio">Portfolio</a></li>
-					<li><a href="index.html" class="transition" data-nav-section="about">About</a></li>
-					<li><a href="index.html" class="transition" data-nav-section="contact">Contact</a></li>
+					<li><a href="index.html" class="transition" data-nav-section="inicio">Inicio</a></li>
+					<li><a href="index.html" class="transition" data-nav-section="portafolio">Portafolio</a></li>
+					<li><a href="index.html" class="transition" data-nav-section="sobre mi">Sobre mi</a></li>
+					<li><a href="index.html" class="transition" data-nav-section="contactame">Contáctame</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -115,25 +115,29 @@
 				<div class="row r-pb">
 					<div class="col-md-8 col-md-offset-2 text-center section-heading">
 						<h2 class="fh5co-section-title animate-box">Sobre ellos</h2>
-						<p class="fh5co-lead animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+						<p class="fh5co-lead animate-box">Puede ser que una vez, en un desvelo, 
+                            descubramos que el mundo es una fiesta, 
+                            y encontremos al fin… 
+                            esa respuesta que desde siempre 
+                            nos esconde el cielo.</p>
 					</div>
 				</div>
 
 				<div class="row">
 					<figure class="animate-box">
-						<img src="images/h4.jpeg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive">
+						<img src="images/h4.jpeg" alt="Christian Sáenz Fotografia y Video" class="img-responsive">
 					</figure>
 					<figure class="animate-box">
-						<img src="images/slide_2.jpg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive">
+						<img src="images/slide_2.jpg" alt="Christian Sáenz Fotografia y Video" class="img-responsive">
 					</figure>
 					<figure class="animate-box">
-						<img src="images/slide_1.jpg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive">
+						<img src="images/slide_1.jpg" alt="Christian Sáenz Fotografia y Video" class="img-responsive">
 					</figure>
 					<figure class="animate-box">
-						<img src="images/pic_13.jpg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive">
+						<img src="images/pic_13.jpg" alt="Christian Sáenz Fotografia y Video" class="img-responsive">
 					</figure>
 					<figure class="animate-box">
-						<img src="images/pic_14.jpg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive">
+						<img src="images/pic_14.jpg" alt="Christian Sáenz Fotografia y Video" class="img-responsive">
 					</figure>
 				</div>
 	
@@ -145,27 +149,18 @@
 				<div class="row">
 					<div class="col-md-6 col-sm-6 animate-box">
 						<div class="fh5co-footer-widget">
-							<p>&copy; Fotografy Free HTML5 Template. All Rights Reserved.</p>
-							<p>Designed by <a href="http://freehtml5.co/">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a> &amp; <a href="http://pexels.com/" target="_blank">Pexels</a></p>
+							<p>&copy; Christian Sáenz. 2017</p>
+							<p>Diseño y desarrollo web de: <a href="www.phronemos.net">Phronemos</a> </p>
 						</div>
 					</div>
 					<div class="col-md-6 col-sm-6 animate-box">
 						<div class="fh5co-footer-widget">
 							<ul class="fh5co-social pull-right">
 								<li>
-									<a href="#"><i class="icon-twitter"></i></a>
+									<a href="https://www.facebook.com/christiansaenzphoto/"><i class="icon-facebook"></i></a>
 								</li>
 								<li>
-									<a href="#"><i class="icon-facebook"></i></a>
-								</li>
-								<li>
-									<a href="#"><i class="icon-vine"></i></a>
-								</li>
-								<li>
-									<a href="#"><i class="icon-behance"></i></a>
-								</li>
-								<li>
-									<a href="#"><i class="icon-google"></i></a>
+									<a href="www.instagram.com/@csphotovideo"><i class="icon-instagram"></i></a>
 								</li>
 							</ul>
 						<div class="fh5co-footer-widget">
@@ -191,6 +186,7 @@
 	<!-- Main JS -->
 	<script src="js/main.js"></script>
 
-	</body>
+            </body>
+        
 </html>
 
