--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Fotografía Profesional" />
 	<meta name="keywords" content="fotografia, bodas, fotografo profesional, eventos" />
-	<meta name="author" content="Phronemos" />
+	<meta name="author" content="Phronemos.net" />
 
   
 
