--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 					<li><a href="#" data-nav-section="portafolio">Portafolio</a></li>
 					<li><a href="#" data-nav-section="sobre mi">Sobre mi</a></li>
 					<li><a href="#" data-nav-section="contactame">Contáctame</a></li>
+                    <li><a href="https://www.facebook.com/christiansaenzphoto/"><i class="icon-facebook"></i></a></li>
+				    <li><a href="www.instagram.com/@csphotovideo"><i class="icon-instagram"></i></a></li>
 				</ul>
 			</nav>
 		</div>
@@ -252,7 +254,7 @@
 			</div>
 		
 
-		<div id="fh5co-about" data-section="sobre mi">
+		<div id="fh5co-about" data-section="sobre-mi">
 			<div class="container">
 				<div class="row r-pb">
 					<div class="col-md-8 col-md-offset-2 text-center section-heading animate-box">
@@ -269,13 +271,48 @@
 		<div id="fh5co-contact" data-section="contactame">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center section-heading">
+				<div class="col-md-8 col-md-offset-2 text-center section-heading">
 						<h2 class="fh5co-section-title animate-box">Contáctame</h2>
 						<p class="fh5co-lead animate-box">Me encantaría contar tu historia.</p>
-						<p class="animate-box">Para saber más sobre mi trabajo presiona el boton, escríbeme a contacto@christiansaenz.com o llámame al <a href="tel: +04126261508">04126261508</a></p>
-						<p class="animate-box"><a href="mailto:contacto@christiansaenz.com.ve" target="_blank" class="btn btn-primary btn-lg">Escríbeme</a></p>
-					</div>
-				</div>
+                    <div class="row form-group">
+                            <div class="col-md-12">
+								<label class="sr-only" for="name">Nombre</label>
+								<input type="text" id="name" class="form-control" placeholder="Nombre y Apellido">
+							</div>
+                    </div>
+                      <div class="row form-group">
+                            <div class="col-md-12">
+								<label class="sr-only" for="subject">Tipo de evento</label>
+								<input type="text" id="subject" class="form-control" placeholder="Tipo de evento">
+							</div>
+                    </div>
+                    <div class="row form-group">
+							<div class="col-md-12">
+								<label class="sr-only" for="fecha">Fecha</label>
+								<input type="text" id="fecha" class="form-control" placeholder="Fecha del evento">
+							</div>
+						</div>
+
+                    <div class="row form-group">
+							<div class="col-md-12">
+								<label class="sr-only" for="email">Correo electrónico</label>
+								<input type="text" id="email" class="form-control" placeholder="Tu dirección de correo">
+							</div>
+						</div>
+                    <div class="row form-group">
+							<div class="col-md-12">
+								<label class="sr-only" for="message">Mensaje</label>
+								<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Comentarios"></textarea>
+							</div>
+						</div>
+
+                    <div class="form-group">
+							<input a href="mailto:contacto@christiansaenz.com.ve" type="submit" value="Enviar Mensaje" class="btn btn-primary">
+						</div>
+
+						<p class="animate-box">Para saber más sobre mi trabajo sígueme en mis redes sociales <a href="https://www.facebook.com/christiansaenzphoto/"><i class="icon-facebook"></i></a>  <a href="www.instagram.com/@csphotovideo"><i class="icon-instagram"></i></a> o llámame al <a href="tel: +04126261508">04126261508</a></p>
+					</div>	
+              </div>
 			</div>
 		</div>
 
