--- a/portafolio-single.html
+++ b/portafolio-single.html
@@ -76,8 +76,10 @@
 				<ul>
 					<li><a href="index.html" class="transition" data-nav-section="inicio">Inicio</a></li>
 					<li><a href="index.html" class="transition" data-nav-section="portafolio">Portafolio</a></li>
-					<li><a href="index.html" class="transition" data-nav-section="sobre mi">Sobre mi</a></li>
+					<li><a href="index.html#fh5co-about" class="transition" data-nav-section="fh5co-about">Sobre mi</a></li>
 					<li><a href="index.html" class="transition" data-nav-section="contactame">Contáctame</a></li>
+                    <li><a href="https://www.facebook.com/christiansaenzphoto/"><i class="icon-facebook"></i></a></li>
+				    <li><a href="www.instagram.com/@csphotovideo"><i class="icon-instagram"></i></a></li>
 				</ul>
 			</nav>
 		</div>
@@ -125,7 +127,7 @@
 
 				<div class="row">
 					<figure class="animate-box">
-						<img src="images/h4.jpeg" alt="Christian Sáenz Fotografia y Video" class="img-responsive">
+						<img src="images/h4.jpeg" alt="Christian Sáenz Fotografia y Video" class="img-responsive"><iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=icon_link&mobile_iframe=true&width=67&height=15&appId" width="67" height="15" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 					</figure>
 					<figure class="animate-box">
 						<img src="images/slide_2.jpg" alt="Christian Sáenz Fotografia y Video" class="img-responsive">
